--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,8 @@
 /*!
 * Version: 1.0.0
 * Template: Chat Boat AI
-* Author: Trueshine
-* Design and Developed by: Trueshine
+* Author: creatiixDesign
+* Design and Developed by: creatiixDesign
 * NOTE: This file contains the styling for Template.
 *
 */
@@ -389,15 +389,15 @@ img {
           border-radius: 0.375rem;
 }
 
+.avatar-status i {
+  font-size: 12px;
+}
 .avatar-status {
   position: absolute;
   bottom: -4px;
   top: auto;
   left: auto;
   right: 4px;
-}
-.avatar-status i {
-  font-size: 12px;
 }
 
 .avatar-borderd {
@@ -736,7 +736,7 @@ img {
 }
 
 .review-card {
-  background-color: var(--bs-body-bg);
+  background-color: var(--bs-gray-900);
   border: 1px solid var(--bs-border-color);
   -webkit-box-shadow: var(--bs-box-shadow);
           box-shadow: var(--bs-box-shadow);
@@ -775,17 +775,8 @@ img {
   background: linear-gradient(90deg, rgba(var(--bs-black-rgb), 0.9), rgba(var(--bs-black-rgb), 0.9) 15%, rgba(var(--bs-black-rgb), 0));
   z-index: -1;
 }
-.main-slider .banner-bg .slider-content-full-height {
+.main-slider .banner-bg .content-full-height {
   min-height: 92vh;
-}
-.main-slider .slider-text {
-  font-size: 4.375em;
-  font-weight: 800;
-  margin: 0 0 0.2em;
-  letter-spacing: 1px;
-}
-.main-slider .imdb-ratting img {
-  height: 2em;
 }
 .main-slider .trending-list {
   margin: 0 0 1.875em;
@@ -793,16 +784,12 @@ img {
 .main-slider .trending-list > div {
   margin-bottom: 0.313em;
 }
-.main-slider .trending-list .genres,
-.main-slider .trending-list .tag,
-.main-slider .trending-list .starring {
+.main-slider .trending-list .tag {
   font-size: 0.875em;
   font-weight: 500;
   position: relative;
 }
-.main-slider .trending-list .genres span,
-.main-slider .trending-list .tag span,
-.main-slider .trending-list .starring span {
+.main-slider .trending-list .tag span {
   margin: 0;
   font-weight: 400;
 }
@@ -812,37 +799,6 @@ img {
 .main-slider .slick-dots {
   margin-top: 1em;
   bottom: 1em;
-}
-
-.main-slider-center .banner-bg {
-  min-height: 70vh;
-  height: 100%;
-  opacity: 0.4;
-  -webkit-filter: blur(0.1875em);
-          filter: blur(0.1875em);
-  -webkit-transition: all 2s ease 0s;
-  -o-transition: all 2s ease 0s;
-  transition: all 2s ease 0s;
-}
-.main-slider-center .banner-bg:before {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(var(--bs-black-rgb), 1)), color-stop(35%, rgba(var(--bs-black-rgb), 1)), to(rgba(var(--bs-light-rgb), 0)));
-  background-image: -webkit-linear-gradient(left, rgba(var(--bs-black-rgb), 1), rgba(var(--bs-black-rgb), 1) 35%, rgba(var(--bs-light-rgb), 0));
-  background-image: -o-linear-gradient(left, rgba(var(--bs-black-rgb), 1), rgba(var(--bs-black-rgb), 1) 35%, rgba(var(--bs-light-rgb), 0));
-  background-image: linear-gradient(90deg, rgba(var(--bs-black-rgb), 1), rgba(var(--bs-black-rgb), 1) 35%, rgba(var(--bs-light-rgb), 0));
-}
-.main-slider-center .banner-bg.slick-active.slick-current {
-  opacity: 1;
-  -webkit-filter: blur(0);
-          filter: blur(0);
-  -webkit-transition: all 2s ease 0s;
-  -o-transition: all 2s ease 0s;
-  transition: all 2s ease 0s;
-}
-.main-slider-center .banner-bg .shows-content {
-  padding: 0 1.875em;
-}
-.main-slider-center .banner-bg .slider-content-full-height {
-  min-height: 70vh;
 }
 
 .playbtn {
@@ -898,37 +854,27 @@ img {
     height: 50px;
     width: 50px;
   }
-  .play-btn .w-trailor {
+  .w-trailor {
     font-size: 1em;
   }
-}
-@media (max-width: 991px) {
   .main-slider .banner-bg {
     padding: 3.125em 0;
     min-height: initial;
   }
-  .banner-bg {
-    min-height: initial;
-  }
-  .banner-bg .slider-content-full-height {
+  .main-slider .banner-bg .content-full-height {
     padding: 3.125em 0em;
-  }
-  .banner-bg .slider-content-full-height {
     min-height: inherit;
     height: inherit;
   }
-  .banner-bg .banner-bg {
-    min-height: initial;
-  }
 }
-.tab-watch-trailer-container {
+.films-trailer-container {
   padding: 0.625em;
   background: var(--bs-gray-900);
   -webkit-backdrop-filter: blur(0.625em);
   backdrop-filter: blur(0.063em);
   border: 0.063em solid var(--bs-border-color);
 }
-.tab-watch-trailer-container .tab-watch-trailer::before {
+.films-trailer-container .films-trailer::before {
   content: "";
   position: absolute;
   top: 0;
@@ -941,13 +887,13 @@ img {
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 0%, rgba(20, 20, 20, 0.9) 15%, rgba(83, 100, 141, 0) 100%);
   opacity: 0.5;
 }
-.tab-watch-trailer-container .trailer-image {
+.films-trailer-container .trailer-image {
   width: 100%;
   aspect-ratio: 3/1;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.tab-watch-trailer-container .playbtn {
+.films-trailer-container .playbtn {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -962,11 +908,11 @@ img {
   aspect-ratio: 16/9;
 }
 
-.playlist-detail-page .playlist-data {
+.films-detail-page .films-data {
   max-height: 22.5em;
   overflow-y: auto;
 }
-.playlist-detail-page .playlist-data .playlist-data-card {
+.films-detail-page .films-data .films-data-card {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -974,13 +920,13 @@ img {
   gap: 1.5em;
   padding: 1em;
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-data-card-image {
+.films-detail-page .films-data .films-data-card .films-data-card-image {
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
   position: relative;
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-data-card-image img {
+.films-detail-page .films-data .films-data-card .films-data-card-image img {
   height: 4em;
   width: 4em;
   min-width: 4em;
@@ -989,24 +935,24 @@ img {
   -webkit-border-radius: var(--bs-border-radius-lg);
           border-radius: var(--bs-border-radius-lg);
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-data-card-content {
+.films-detail-page .films-data .films-data-card .films-data-card-content {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
   width: 100%;
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-data-card-content .line-count-2 {
+.films-detail-page .films-data .films-data-card .films-data-card-content .line-count-2 {
   overflow: hidden;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-category li {
+.films-detail-page .films-data .films-data-card .films-category li {
   position: relative;
   font-size: 0.75em;
 }
-.playlist-detail-page .playlist-data .playlist-data-card .playlist-category li:not(:last-child)::before {
+.films-detail-page .films-data .films-data-card .films-category li:not(:last-child)::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -1020,10 +966,10 @@ img {
   -webkit-border-radius: 50%;
           border-radius: 50%;
 }
-.playlist-detail-page .playlist-data .playlist-data-card.active, .playlist-detail-page .playlist-data .playlist-data-card:hover {
+.films-detail-page .films-data .films-data-card.active, .films-detail-page .films-data .films-data-card:hover {
   background-color: var(--bs-body-bg);
 }
-.playlist-detail-page .playlist-data .playlist-data-card.active .playlist-data-title, .playlist-detail-page .playlist-data .playlist-data-card:hover .playlist-data-title {
+.films-detail-page .films-data .films-data-card.active .films-data-title, .films-detail-page .films-data .films-data-card:hover .films-data-title {
   color: var(--bs-primary);
 }
 
@@ -1041,7 +987,7 @@ img {
           border-radius: 0 var(--bs-border-radius) 0 var(--bs-border-radius);
 }
 .pricing-card .package-badge {
-  background: var(--bs-purple);
+  background: var(--bs-body-bg);
   color: var(--bs-body-text);
   -webkit-border-radius: var(--bs-border-radius);
           border-radius: var(--bs-border-radius);
@@ -1218,6 +1164,10 @@ img {
 }
 .bg-gray-900 {
   background-color: var(--bs-gray-900);
+}
+
+.bg-gray-800 {
+  background-color: var(--bs-gray-800);
 }
 
 .cursor-pointer {
