--- a/assets/css/marvel-creation.css
+++ b/assets/css/marvel-creation.css
@@ -2628,7 +2628,7 @@ progress {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-color: var(--bs-gray-800);
+  background-color: var(--bs-gray-900);
   -webkit-background-clip: padding-box;
           background-clip: padding-box;
   border: var(--bs-border-width) solid transparent;
@@ -2655,7 +2655,7 @@ progress {
 }
 .form-control:focus {
   color: var(--bs-body-color);
-  background-color: var(--bs-gray-800);
+  background-color: var(--bs-gray-900);
   border-color: var(--bs-primary);
   outline: 0;
   -webkit-box-shadow: none;
@@ -2817,7 +2817,7 @@ textarea.form-control-lg {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-color: var(--bs-gray-800);
+  background-color: var(--bs-gray-900);
   background-image: var(--bs-form-select-bg-img), var(--bs-form-select-bg-icon, none);
   background-repeat: no-repeat;
   background-position: right 1.5rem center;
@@ -3223,7 +3223,7 @@ textarea.form-control-lg {
   z-index: -1;
   height: 1.5em;
   content: "";
-  background-color: var(--bs-gray-800);
+  background-color: var(--bs-gray-900);
   -webkit-border-radius: var(--bs-border-radius);
           border-radius: var(--bs-border-radius);
 }
@@ -16291,6 +16291,64 @@ textarea.form-control-lg {
   --bs-btn-padding-x: 0.5rem;
   --bs-btn-font-size: 0.875rem;
   --bs-btn-border-radius: 0.375rem;
+}
+
+.input-group.custom-input-group {
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+}
+.input-group.custom-input-group .form-control {
+  border-color: var(--bs-border-color);
+  -webkit-border-radius: var(--bs-border-radius);
+          border-radius: var(--bs-border-radius);
+  background-color: var(--bs-gray-900);
+  color: var(--bs-heading-color);
+  padding-right: 0;
+  border-right: 0;
+  -webkit-border-top-right-radius: 0;
+          border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+          border-bottom-right-radius: 0;
+  -webkit-border-top-left-radius: var(--bs-border-radius);
+          border-top-left-radius: var(--bs-border-radius);
+  -webkit-border-bottom-left-radius: var(--bs-border-radius);
+          border-bottom-left-radius: var(--bs-border-radius);
+}
+.input-group.custom-input-group .form-control:focus {
+  border-color: var(--bs-primary) !important;
+}
+.input-group.custom-input-group .form-control:focus + .input-group-text {
+  border-color: var(--bs-primary);
+}
+.input-group.custom-input-group .form-control + .input-group-text {
+  -webkit-border-top-right-radius: var(--bs-border-radius) !important;
+          border-top-right-radius: var(--bs-border-radius) !important;
+  -webkit-border-bottom-right-radius: var(--bs-border-radius) !important;
+          border-bottom-right-radius: var(--bs-border-radius) !important;
+}
+.input-group.custom-input-group .input-group-text {
+  color: var(--bs-gray-600);
+  background-color: var(--bs-gray-900);
+  border-color: var(--bs-border-color);
+  border-left: 0;
+  -webkit-border-top-left-radius: 0;
+          border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+          border-bottom-left-radius: 0;
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  -o-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.form-control {
+  border-color: var(--bs-border-color);
+  -webkit-border-radius: var(--bs-border-radius);
+          border-radius: var(--bs-border-radius);
+  background-color: var(--bs-gray-900);
+  color: var(--bs-heading-color);
 }
 
 .navbar .horizontal-nav .offcanvas-header {
