--- a/assets/css/marvel-creation.css
+++ b/assets/css/marvel-creation.css
@@ -2,8 +2,8 @@
 /*!
 * Version: 1.0.0
 * Template: Streamit - Responsive Bootstrap 5.3.7 Template
-* Author: true shine
-* Design and Developed by: true shine
+* Author: Creatiix Design
+* Design and Developed by: Creatiix Design
 * NOTE: This file contains the styling for Template.
 *
 */
@@ -15605,7 +15605,7 @@ textarea.form-control-lg {
 }
 
 @media (max-width: 767.98px) {
-  .slick-item {
+  .slick-slider .slick-item {
     margin: 0 0;
   }
 }
@@ -15735,6 +15735,11 @@ textarea.form-control-lg {
 .btn-close {
   -webkit-border-radius: 0.25rem;
           border-radius: 0.25rem;
+}
+
+.btn:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .btn {
