--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -1,8 +1,8 @@
 /*!
 * Version: 1.0.0
 * Template: Streamit - Responsive Bootstrap 5.3.7 Template
-* Author: True Shine
-* Design and Developed by: True Shine
+* Author: Creatiix Design
+* Design and Developed by: Creatiix Design
 * NOTE: This file contains the styling for Template.
 *
 */
